--- a/Example/GBFlatButtonExample/GBFlatButtonExample/ViewController.xib
+++ b/Example/GBFlatButtonExample/GBFlatButtonExample/ViewController.xib
@@ -6,7 +6,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
             <connections>
+                <outlet property="blueButton" destination="cmR-c6-Vkk" id="Crc-wo-WGS"/>
+                <outlet property="greenButton" destination="e1b-vP-oUY" id="qBf-q7-R7u"/>
+                <outlet property="orangeButton" destination="nek-uE-cBf" id="OxD-Sb-XI5"/>
+                <outlet property="pinkButton" destination="soT-8H-50i" id="poY-Be-fDG"/>
+                <outlet property="purpleButton" destination="fkx-mM-HRd" id="9t2-Bv-ZA5"/>
                 <outlet property="view" destination="iN0-l3-epB" id="WRj-WA-HmP"/>
+                <outlet property="yellowButton" destination="Avi-bf-EFg" id="P4U-2W-Pup"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -14,102 +20,81 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o3e-wp-2pS">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="soT-8H-50i" customClass="GBFlatButton">
+                    <rect key="frame" x="142" y="94" width="36" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="soT-8H-50i" customClass="GBFlatButton">
-                            <rect key="frame" x="145" y="100" width="30" height="40"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="bLj-26-WfY"/>
-                            </constraints>
-                            <color key="tintColor" red="0.80784313730000001" green="0.26274509800000001" blue="0.50980392159999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Pink">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Avi-bf-EFg" customClass="GBFlatButton">
-                            <rect key="frame" x="138" y="170" width="44" height="40"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="9Rt-n1-ZYa"/>
-                            </constraints>
-                            <color key="tintColor" red="0.99215686270000003" green="0.7725490196" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Yellow">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nek-uE-cBf" customClass="GBFlatButton">
-                            <rect key="frame" x="135" y="240" width="51" height="40"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="mZU-0H-bey"/>
-                            </constraints>
-                            <color key="tintColor" red="1" green="0.65490196079999996" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Orange">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1b-vP-oUY" customClass="GBFlatButton">
-                            <rect key="frame" x="139" y="310" width="42" height="40"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="3qX-r3-Q0p"/>
-                            </constraints>
-                            <color key="tintColor" red="0.61960784310000006" green="0.82745098039999998" blue="0.058823529409999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Green">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cmR-c6-Vkk" customClass="GBFlatButton">
-                            <rect key="frame" x="145" y="380" width="31" height="40"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="SB0-bz-Iax"/>
-                            </constraints>
-                            <color key="tintColor" red="0.3921568627" green="0.76078431369999999" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Blue">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkx-mM-HRd" customClass="GBFlatButton">
-                            <rect key="frame" x="138" y="450" width="45" height="40"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="40" id="sYf-3l-9Kl"/>
-                            </constraints>
-                            <color key="tintColor" red="0.48627450979999998" green="0.46274509800000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Purple">
-                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                        </button>
-                    </subviews>
                     <constraints>
-                        <constraint firstItem="nek-uE-cBf" firstAttribute="leading" secondItem="o3e-wp-2pS" secondAttribute="leading" constant="135" placeholder="YES" id="1Fd-M1-1nZ"/>
-                        <constraint firstAttribute="centerX" secondItem="cmR-c6-Vkk" secondAttribute="centerX" id="70S-ce-SS0"/>
-                        <constraint firstItem="Avi-bf-EFg" firstAttribute="top" secondItem="soT-8H-50i" secondAttribute="bottom" constant="30" id="AfS-hG-Lvy"/>
-                        <constraint firstAttribute="centerX" secondItem="e1b-vP-oUY" secondAttribute="centerX" id="Dtp-ES-5wb"/>
-                        <constraint firstItem="soT-8H-50i" firstAttribute="top" secondItem="o3e-wp-2pS" secondAttribute="top" constant="100" id="ETm-gP-nCr"/>
-                        <constraint firstItem="nek-uE-cBf" firstAttribute="top" secondItem="Avi-bf-EFg" secondAttribute="bottom" constant="30" id="LZt-V1-gnI"/>
-                        <constraint firstAttribute="trailing" secondItem="nek-uE-cBf" secondAttribute="trailing" constant="134" placeholder="YES" id="LeD-4d-xT2"/>
-                        <constraint firstAttribute="centerX" secondItem="fkx-mM-HRd" secondAttribute="centerX" id="Me3-Jj-DUd"/>
-                        <constraint firstAttribute="centerX" secondItem="soT-8H-50i" secondAttribute="centerX" id="OOx-9O-ufw"/>
-                        <constraint firstAttribute="bottom" secondItem="fkx-mM-HRd" secondAttribute="bottom" constant="138" id="TU7-Su-z76"/>
-                        <constraint firstItem="fkx-mM-HRd" firstAttribute="top" secondItem="cmR-c6-Vkk" secondAttribute="bottom" constant="30" id="Y5t-lg-ySL"/>
-                        <constraint firstAttribute="centerX" secondItem="nek-uE-cBf" secondAttribute="centerX" id="bpM-ij-DEG"/>
-                        <constraint firstItem="e1b-vP-oUY" firstAttribute="top" secondItem="nek-uE-cBf" secondAttribute="bottom" constant="30" id="iNG-0P-3JS"/>
-                        <constraint firstAttribute="centerX" secondItem="Avi-bf-EFg" secondAttribute="centerX" id="kcw-su-Znw"/>
-                        <constraint firstItem="cmR-c6-Vkk" firstAttribute="top" secondItem="e1b-vP-oUY" secondAttribute="bottom" constant="30" id="n9K-ML-07g"/>
+                        <constraint firstAttribute="height" constant="40" id="bLj-26-WfY"/>
                     </constraints>
-                </scrollView>
+                    <state key="normal" title="Pink">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Avi-bf-EFg" customClass="GBFlatButton">
+                    <rect key="frame" x="134" y="164" width="52" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="9Rt-n1-ZYa"/>
+                    </constraints>
+                    <state key="normal" title="Yellow">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nek-uE-cBf" customClass="GBFlatButton">
+                    <rect key="frame" x="130" y="234" width="60" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="mZU-0H-bey"/>
+                    </constraints>
+                    <state key="normal" title="Orange">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1b-vP-oUY" customClass="GBFlatButton">
+                    <rect key="frame" x="136" y="294" width="49" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="3qX-r3-Q0p"/>
+                    </constraints>
+                    <state key="normal" title="Green">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cmR-c6-Vkk" customClass="GBFlatSelectableButton">
+                    <rect key="frame" x="142" y="364" width="36" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="SB0-bz-Iax"/>
+                    </constraints>
+                    <state key="normal" title="Blue">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fkx-mM-HRd" customClass="GBFlatSelectableButton">
+                    <rect key="frame" x="134" y="434" width="53" height="40"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="sYf-3l-9Kl"/>
+                    </constraints>
+                    <state key="normal" title="Purple">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="o3e-wp-2pS" secondAttribute="bottom" id="bzm-v1-Q1b"/>
-                <constraint firstItem="o3e-wp-2pS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="rxQ-tn-S1L"/>
-                <constraint firstItem="o3e-wp-2pS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="tZF-FK-4xH"/>
-                <constraint firstAttribute="trailing" secondItem="o3e-wp-2pS" secondAttribute="trailing" id="vMe-1a-E2r"/>
+                <constraint firstAttribute="centerX" secondItem="soT-8H-50i" secondAttribute="centerX" id="LWm-Xt-FWT"/>
+                <constraint firstItem="cmR-c6-Vkk" firstAttribute="top" secondItem="e1b-vP-oUY" secondAttribute="bottom" constant="30" id="PkA-q4-BX0"/>
+                <constraint firstAttribute="centerX" secondItem="nek-uE-cBf" secondAttribute="centerX" id="RMk-sv-KeZ"/>
+                <constraint firstItem="Avi-bf-EFg" firstAttribute="top" secondItem="soT-8H-50i" secondAttribute="bottom" constant="30" id="T5X-q2-Zhe"/>
+                <constraint firstAttribute="centerY" secondItem="e1b-vP-oUY" secondAttribute="centerY" constant="-30" id="UvZ-0p-zCe"/>
+                <constraint firstItem="nek-uE-cBf" firstAttribute="top" secondItem="Avi-bf-EFg" secondAttribute="bottom" constant="30" id="ePx-fy-6k4"/>
+                <constraint firstAttribute="centerX" secondItem="cmR-c6-Vkk" secondAttribute="centerX" id="j7x-nd-Bz3"/>
+                <constraint firstAttribute="centerX" secondItem="fkx-mM-HRd" secondAttribute="centerX" id="lnR-yZ-FRM"/>
+                <constraint firstAttribute="centerX" secondItem="Avi-bf-EFg" secondAttribute="centerX" id="nZp-GZ-oqe"/>
+                <constraint firstItem="fkx-mM-HRd" firstAttribute="top" secondItem="cmR-c6-Vkk" secondAttribute="bottom" constant="30" id="qC7-gn-xmd"/>
+                <constraint firstAttribute="centerY" secondItem="nek-uE-cBf" secondAttribute="centerY" constant="30" id="rXM-tK-ldc"/>
+                <constraint firstAttribute="centerX" secondItem="e1b-vP-oUY" secondAttribute="centerX" id="xZj-8m-O1e"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
