Fix tintColor for buttons using iOS < 7

--- a/Example/GBFlatButtonExample/GBFlatButtonExample/ViewController.xib
+++ b/Example/GBFlatButtonExample/GBFlatButtonExample/ViewController.xib
@@ -63,7 +63,7 @@
                     <color key="tintColor" red="0.48627450979999998" green="0.46274509800000002" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="Purple"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KGh-G7-ZaO" customClass="GBFlatButton">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KGh-G7-ZaO" customClass="GBFlatButton">
                     <rect key="frame" x="222" y="94" width="36" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
